// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeader is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiHeader euiHeader--default euiHeader--static testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiHeader renders children 1`] = `
<div
  class="euiHeader euiHeader--default euiHeader--static"
>
  <span>
    Hello!
  </span>
</div>
`;

exports[`EuiHeader renders dark theme 1`] = `
<div
  class="euiHeader euiHeader--dark euiHeader--static"
/>
`;

exports[`EuiHeader renders in fixed position 1`] = `
<div
  class="euiHeader euiHeader--default euiHeader--fixed"
>
  <span>
    Hello!
  </span>
</div>
`;

exports[`EuiHeader sections render breadcrumbs and props 1`] = `
<div
  class="euiHeader euiHeader--default euiHeader--static"
>
  <nav
    aria-label="Breadcrumbs"
    class="euiBreadcrumbs euiHeaderBreadcrumbs euiBreadcrumbs--truncate"
  >
    <ol
      class="euiBreadcrumbs__list"
    >
      <li
        class="euiBreadcrumb euiBreadcrumb--last"
      >
        <span
          aria-current="page"
          class="euiBreadcrumb__content"
        >
          Breadcrumb
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`EuiHeader sections render simple items and borders 1`] = `
<div
  class="euiHeader euiHeader--default euiHeader--static"
>
  <div
    class="euiHeaderSection euiHeaderSection--dontGrow euiHeaderSection--left"
  >
    <div
      class="euiHeaderSectionItem euiHeaderSectionItem--borderRight"
    >
      Item 1
    </div>
    <div
      class="euiHeaderSectionItem euiHeaderSectionItem--borderRight"
    >
      Item 2
    </div>
  </div>
  <div
    class="euiHeaderSection euiHeaderSection--dontGrow euiHeaderSection--left"
  >
    <div
      class="euiHeaderSectionItem euiHeaderSectionItem--borderLeft"
    >
      Item A
    </div>
    <div
      class="euiHeaderSectionItem euiHeaderSectionItem--borderLeft"
    >
      Item B
    </div>
  </div>
</div>
`;

exports[`EuiHeader throws a warning if both children and sections were passed 1`] = `
<div
  class="euiHeader euiHeader--default euiHeader--static"
>
  <div
    class="euiHeaderSection euiHeaderSection--dontGrow euiHeaderSection--left"
  >
    <div
      class="euiHeaderSectionItem euiHeaderSectionItem--borderLeft"
    >
      Item 1
    </div>
    <div
      class="euiHeaderSectionItem euiHeaderSectionItem--borderLeft"
    >
      Item 2
    </div>
  </div>
</div>
`;
